--- a/.gitignore
+++ b/.gitignore
@@ -146,4 +146,7 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+# Database Files
+*.db
+
 # End of https://www.toptal.com/developers/gitignore/api/flask
